move from cf release to cf deployment

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -17,9 +17,9 @@ html
           div.dollar
           div.row
             div.col-xs-12.col-sm-6
-              h2 Latest CF Release: 
-                a.subtle(href=latestCfRelease.url, target='_blank') #{latestCfRelease.name}
-              h3(style={'opacity': '0.8'}) #{latestCfRelease.date}
+              h2 Latest CF Deployment: 
+                a.subtle(href=latestCfDeployment.url, target='_blank') #{latestCfDeployment.name}
+              h3(style={'opacity': '0.8'}) #{latestCfDeployment.date}
             div.col-xs-12.col-sm-6
               h2 Latest CAPI Release: 
                 a.subtle(href=latestCapiRelease.url, target='_blank') #{latestCapiRelease.name}
